Fix Register Form Alignment

--- a/AutoLogWeb/frontend/src/components/DefaultStyles.css
+++ b/AutoLogWeb/frontend/src/components/DefaultStyles.css
@@ -41,7 +41,9 @@
 }
 
 .form-standard label {
-    width: 20vw;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     font-size: large;
     text-align: left;
     color: white;
@@ -108,6 +110,7 @@
 
 .validator-group {
     display: flex;
-    width: 50%;
+    justify-content: space-between;
+    width: 100%;
     align-items: last baseline;
 }
