--- a/AutoLogWeb/frontend/src/components/Login.css
+++ b/AutoLogWeb/frontend/src/components/Login.css
@@ -1,3 +1,7 @@
+#loginForm.form-standard input {
+    min-width: 20vw;
+}
+
 .separator {
     display: flex;
     align-items: center;
