--- a/AutoLogWeb/frontend/src/components/ResetPassword.css
+++ b/AutoLogWeb/frontend/src/components/ResetPassword.css
@@ -1,7 +1,3 @@
-.validator-group {
-    width: auto;
-}
-
 .checkmark,
 .crossmark {
     margin-left: 10px;
